@@ -10,6 +10,7 @@ Permitir no guardar snapshot al salir de ZEsarUX
 Permitir definir Alt Izq, Ctrl Izq, Shift Izq o TAB como acción de Fuego de Joystick
 Permitir cambiar posicion de lectura actual en Visor de Cinta de Entrada para archivos .tap
 Permitir cargar rom de 8kb en ZX80 (por ejemplo la rom del ZX81, como un ZX80 actualizado a ZX81)
+Permitir aumentar sprites en View Sprites
 
 Mejorado ZX Vision:
 - Al seleccionar estilo de ZX Vision Style, se aplica al mover el cursor
